# ZoneMinder-Viewer

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  README  TODO  config-zmviewer.h.cmake  translations.qrc  zmviewer.kdevelop  zmviewer.kdevelop.pcs  zmviewer.kdevses
cmake/Toolchains/: i486-mingw32.cmake  i686-w64-mingw32.cmake
src/: CMakeLists.txt  about.cpp  about.h  cameraselectdialog.cpp  cameraselectdialog.h  camerawidget.cpp  camerawidget.h  camerawidgettoolbar.cpp  camerawidgettoolbar.h  config.h  fullscreencamera.cpp  mainwindow.cpp  mainwindow.h  moc_cameradockwidget.cpp  moc_cameratoolbar.cpp  multicameraview.cpp  resources.qrc  src.pro  stream.h  ui_cameratoolbar.h
src/core/: CMakeLists.txt  abstractplayer.cpp  abstractplayer.h  auth.cpp  auth.h  authdialog.cpp  authdialog.h  blackwidget.cpp  blackwidget.h  cameraadddialog.cpp  cameraadddialog.h  cameraevents.cpp  cameraevents.h  cameralayout.cpp  cameralayout.h  cameraviewerpage.cpp  cameraviewerpage.h  camerawidget.cpp  camerawidget.h  camerawidgettoolbar.cpp  camerawidgettoolbar.h  commandlistener.cpp  commandlistener.h  config.h  connectionmanager.cpp  connectionmanager.h  connectionwidget.cpp  connectionwidget.h  core.pro  databasesession.cpp  databasesession.h  doublecamerawidget.cpp  doublecamerawidget.h  framewidget.cpp  framewidget.h  fullscreencamera.cpp  fullscreencamera.h  maincamerawidget.cpp  maincamerawidget.h  mjpegplayer.cpp  (+10 more)
src/core/models/: basemodel.cpp  basemodel.h  eventmodel.cpp  eventmodel.h
src/core/rest/: requestinterface.cpp  requestinterface.h  rest.cpp  rest.h  zoneminderhtmlrequest.cpp  zoneminderhtmlrequest.h
src/core/ui/: authdialogwidget.ui  cameraadddialog.ui  sessionwidget.ui
src/shell/: CMakeLists.txt  about.cpp  about.h  adminpanel.cpp  adminpanel.h  cameraadddialog.cpp  cameraadddialog.h  cameraselectdialog.cpp  cameraviewer.cpp  cameraviewer.h  camerawidget.cpp  camerawidgettoolbar.cpp  config.h  controlbar.cpp  controlbar.h  layoutbar.cpp  layoutbar.h  layoutbutton.cpp  layoutbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  multicameraview.cpp  multicameraview.h  preferencesdialog.cpp  preferencesdialog.h  resources.qrc  shell.pro  shell_resources.qrc  sidebar.cpp  sidebar.h  sliderlayoutbutton.cpp  sliderlayoutbutton.h  stream.cpp  translator.cpp  translator.h
src/shell/config/: cameraconfigwidget.cpp  cameraconfigwidget.h  configdialog.cpp  configdialog.h  configdialogpage.cpp  configdialogpage.h  languageconfigwidget.cpp  languageconfigwidget.h  pageswidget.cpp  pageswidget.h
src/shell/styles/: style.cpp  style.h  styledialog.cpp  styledialog.h
src/shell/styles/examples/blackstyle/: blackstyle.qss  blackstyle.xml
src/shell/styles/examples/whitestyle/: whitestyle.qss  whitestyle.xml
src/shell/ui/: aboutdialog.ui  cameraconfigwidget.ui  languageconfigwidget.ui
src/ui/: cameraadddialog.ui
templates/: h
translations/: zmviewer_en.qm  zmviewer_en.ts  zmviewer_es.qm  zmviewer_es.ts  zmviewer_it.qm  zmviewer_it.ts  zmviewer_pl_PL.qm  zmviewer_pl_PL.ts
